EOEPCA-289 add DemoClient function to proc_list_jobs()

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "international-survivor",
+   "id": "innovative-progress",
    "metadata": {},
    "source": [
     "# Processing\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "floppy-facing",
+   "id": "spanish-bracket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "marine-conservation",
+   "id": "partial-flood",
    "metadata": {},
    "source": [
     "## Initialise"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grand-smell",
+   "id": "authentic-spank",
    "metadata": {},
    "source": [
     "### Client\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "processed-chinese",
+   "id": "tropical-wireless",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "multiple-shower",
+   "id": "reported-retail",
    "metadata": {},
    "source": [
     "### User\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "executive-notification",
+   "id": "aware-asian",
    "metadata": {
     "tags": []
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greenhouse-posting",
+   "id": "surgical-europe",
    "metadata": {},
    "source": [
     "## ADES\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "catholic-article",
+   "id": "former-coast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interim-permission",
+   "id": "vocational-purple",
    "metadata": {},
    "source": [
     "### ADES API Processes"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "embedded-flexibility",
+   "id": "broken-castle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "standing-narrative",
+   "id": "blond-corruption",
    "metadata": {},
    "source": [
     "#### ADES: List Processes"
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "extreme-exclusive",
+   "id": "arbitrary-affairs",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "listed-shareware",
+   "id": "better-cookie",
    "metadata": {},
    "source": [
     "#### ADES: Deploy Application"
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "active-nature",
+   "id": "micro-bridge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "featured-parade",
+   "id": "rental-kidney",
    "metadata": {
     "tags": []
    },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "congressional-portland",
+   "id": "charged-locator",
    "metadata": {},
    "source": [
     "#### ADES: Get Application Details"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dimensional-homework",
+   "id": "signed-playing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "different-wheel",
+   "id": "organizational-provincial",
    "metadata": {},
    "source": [
     "#### ADES: Execute Application"
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "split-aspect",
+   "id": "junior-antique",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "false-associate",
+   "id": "preliminary-chicken",
    "metadata": {},
    "source": [
     "#### ADES: Job Status"
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "difficult-argentina",
+   "id": "chronic-tennis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "regional-madness",
+   "id": "fixed-joyce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "victorian-austin",
+   "id": "major-enough",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "painful-specialist",
+   "id": "robust-hardwood",
    "metadata": {},
    "source": [
     "#### ADES: Job Result"
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fuzzy-peace",
+   "id": "military-weekend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "second-rolling",
+   "id": "romantic-darkness",
+   "metadata": {},
+   "source": [
+    "#### ADES: List Jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "intelligent-wound",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API Processes - List Jobs\n",
+    "response, ades_access_token, job_ids = demo.proc_list_jobs(ades_proc_url, app_name, id_token=user_id_token, access_token=ades_access_token)\n",
+    "print(\"Jobs:\", job_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "german-amazon",
    "metadata": {},
    "source": [
     "#### ADES: Undeploy Application"
@@ -287,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "final-madagascar",
+   "id": "medium-remove",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "collect-instrument",
+   "id": "fifty-vietnam",
    "metadata": {
     "tags": []
    },
