EOEPCA-289 some initial steps for Workspace and S3 interrogation

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "innovative-progress",
+   "id": "conceptual-judges",
    "metadata": {},
    "source": [
     "# Processing\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spanish-bracket",
+   "id": "manufactured-repair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "partial-flood",
+   "id": "liable-reform",
    "metadata": {},
    "source": [
     "## Initialise"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authentic-spank",
+   "id": "experienced-yemen",
    "metadata": {},
    "source": [
     "### Client\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tropical-wireless",
+   "id": "fluid-plane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reported-retail",
+   "id": "written-somalia",
    "metadata": {},
    "source": [
     "### User\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aware-asian",
+   "id": "formed-scope",
    "metadata": {
     "tags": []
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surgical-europe",
+   "id": "swiss-librarian",
    "metadata": {},
    "source": [
     "## ADES\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "former-coast",
+   "id": "distinguished-particle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vocational-purple",
+   "id": "different-studio",
    "metadata": {},
    "source": [
     "### ADES API Processes"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "broken-castle",
+   "id": "architectural-college",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blond-corruption",
+   "id": "framed-russell",
    "metadata": {},
    "source": [
     "#### ADES: List Processes"
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arbitrary-affairs",
+   "id": "progressive-experiment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "better-cookie",
+   "id": "aggregate-scratch",
    "metadata": {},
    "source": [
     "#### ADES: Deploy Application"
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "micro-bridge",
+   "id": "legal-thunder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rental-kidney",
+   "id": "suffering-message",
    "metadata": {
     "tags": []
    },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "charged-locator",
+   "id": "intimate-douglas",
    "metadata": {},
    "source": [
     "#### ADES: Get Application Details"
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "signed-playing",
+   "id": "surgical-cleveland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "organizational-provincial",
+   "id": "fourth-decline",
    "metadata": {},
    "source": [
     "#### ADES: Execute Application"
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "junior-antique",
+   "id": "existing-soccer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "preliminary-chicken",
+   "id": "frozen-while",
    "metadata": {},
    "source": [
     "#### ADES: Job Status"
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chronic-tennis",
+   "id": "amateur-technique",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fixed-joyce",
+   "id": "infinite-eleven",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "major-enough",
+   "id": "steady-revolution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "robust-hardwood",
+   "id": "suitable-construction",
    "metadata": {},
    "source": [
     "#### ADES: Job Result"
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "military-weekend",
+   "id": "elegant-remains",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "romantic-darkness",
+   "id": "super-nutrition",
    "metadata": {},
    "source": [
     "#### ADES: List Jobs"
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "intelligent-wound",
+   "id": "temporal-drain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "german-amazon",
+   "id": "ongoing-sleeve",
    "metadata": {},
    "source": [
     "#### ADES: Undeploy Application"
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "medium-remove",
+   "id": "sharing-closing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fifty-vietnam",
+   "id": "variable-handy",
    "metadata": {
     "tags": []
    },
@@ -327,6 +327,89 @@
     "# Check undeploy - list processes\n",
     "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
     "print(\"Processes:\", process_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "controlled-mambo",
+   "metadata": {},
+   "source": [
+    "## Workspace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "green-record",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workspace_url = \"https://workspace-api.\" + base_domain\n",
+    "workspace_access_token = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "terminal-missile",
+   "metadata": {},
+   "source": [
+    "### Workspace: Get Details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "organizational-terror",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Workspace - Get Details\n",
+    "workspace_name = \"rm-user-\" + USER_NAME.lower()\n",
+    "response, workspace_access_token = demo.workspace_get_details(workspace_url, workspace_name, id_token=user_id_token, access_token=workspace_access_token)\n",
+    "workspace_details = response.json()\n",
+    "print(json.dumps(workspace_details, indent = 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "seeing-deployment",
+   "metadata": {},
+   "source": [
+    "### Inspect S3 Bucket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "republican-graph",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Bucket details\n",
+    "bucket_name = workspace_details[\"storage\"][\"credentials\"][\"bucketname\"]\n",
+    "s3_access = workspace_details[\"storage\"][\"credentials\"][\"access\"]\n",
+    "s3_secret = workspace_details[\"storage\"][\"credentials\"][\"secret\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ancient-patent",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Quick hack S3 access\n",
+    "import boto3\n",
+    "\n",
+    "# Init S3 session for Creodias\n",
+    "S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
+    "session = boto3.session.Session()\n",
+    "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
+    "\n",
+    "# List bucket contents\n",
+    "bucket = s3resource.Bucket(bucket_name)\n",
+    "for obj in bucket.objects.all():\n",
+    "    print(' ->', obj)"
    ]
   }
  ],
