EOEPCA-340 update dockerfile

--- a/demoroot/notebooks/umTest.ipynb
+++ b/demoroot/notebooks/umTest.ipynb
@@ -14,7 +14,7 @@
        "    \"response_type\": \"token id_token\",\n",
        "    \"display\": \"popup\",\n",
        "    \"client_id\": \"c00c65cd-18c5-4514-9c6c-aac49f217c4e\",\n",
-       "    \"redirect_uri\": \"https://test.185.52.193.87.nip.io/callback.html\",\n",
+       "    \"redirect_uri\": \"http://localhost:8888/lab/callback.html\",\n",
        "    \"scope\": \"profile openid\",\n",
        "    \"nonce\": \"asohuasgasdgas79astgasgas\",\n",
        "    \"response_mode\": \"query\"\n",
