EOEPCA-340 notebook update with policy enforcement

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -300,6 +300,126 @@
     "response, process_ids, ades_access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
     "print(\"Processes:\", process_ids)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "controlled-mambo",
+   "metadata": {},
+   "source": [
+    "## Policy Enforcement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "written-somalia",
+   "metadata": {},
+   "source": [
+    "### User\n",
+    "User authenticates and the client receives an ID Token (JWT) that represents the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "formed-scope",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# Authenticate as UserB and get ID Token\n",
+    "#-------------------------------------------------------------------------------\n",
+    "USER_NAME=\"demoB\"\n",
+    "USER_PASSWORD=\"defaultPWD\"\n",
+    "userb_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fourth-decline",
+   "metadata": {},
+   "source": [
+    "#### UserB: Unauthorized Execute Application"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "existing-soccer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# Unauthorized Execution\n",
+    "# Expected Value: 401\n",
+    "#-------------------------------------------------------------------------------\n",
+    "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, app_name, \"../data/app-execute-body.json\", id_token=None, access_token=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fourth-decline",
+   "metadata": {},
+   "source": [
+    "#### UserA: Updates Policy Value\n",
+    "UserA will grant access to UserB to execute the deployed app"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "existing-soccer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# Get Ownership Id\n",
+    "#-------------------------------------------------------------------------------\n",
+    "owB = demo.get_ownership_id(userb_id_token)\n",
+    "owA = demo.get_ownership_id(user_id_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "existing-soccer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# Finds the policy by retrieving a resource_id\n",
+    "# Update policy with allowing access to UserB\n",
+    "#-------------------------------------------------------------------------------\n",
+    "ades_res=\"http://ades.resources.185.52.193.87.nip.io\"\n",
+    "res_id = demo.get_resource_by_name(ades_res, \"s-expression-0_0_2\", user_id_token)\n",
+    "data={'name':'Updated Execution','description':'modified','config':{'resource_id':'res_id','action':'view','rules':[{'OR':[{'EQUAL':{'id':'owA'}},{'EQUAL':{'id':'owB'}}]}]},'scopes':['protected_access']}\n",
+    "pdp_url= \"http://test.185.52.193.87.nip.io/pdp\"\n",
+    "resp, text= demo.update_policy(pdp_url, data, res_id, user_id_token)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fourth-decline",
+   "metadata": {},
+   "source": [
+    "#### UserB: Executes Application Succesfully\n",
+    "With ownerhip validation the resource can be accessed by UserB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "existing-soccer",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# User B Execute Application Succesfully\n",
+    "# Expected Value: 201\n",
+    "#-------------------------------------------------------------------------------\n",
+    "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, app_name, \"../data/app-execute-body.json\", id_token=userb_id_token, access_token=None)"
+   ]
   }
  ],
  "metadata": {
