Small tweaks to '03 Demo' notebook

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "front-japan",
+   "id": "palestinian-steps",
    "metadata": {},
    "source": [
     "# Demonstration\n",
-    "End-to-end demonstration."
+    "End-to-end demonstration.<br>\n",
+    "Ref. https://docs.google.com/document/d/1opi0xGTaMZC0TA2CF2VF1DrWHXeE6M-89ricwlsXtXg/edit?usp=sharing"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bored-variety",
+   "id": "spanish-annex",
    "metadata": {},
    "source": [
     "## Application Development\n",
@@ -23,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "starting-scenario",
+   "id": "champion-facing",
    "metadata": {},
    "source": [
     "## Demo Client Setup\n",
@@ -34,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aquatic-possession",
+   "id": "favorite-wallace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "native-pennsylvania",
+   "id": "fluid-trail",
    "metadata": {},
    "source": [
     "### Authenticated User\n",
@@ -67,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "disciplinary-investing",
+   "id": "robust-second",
    "metadata": {
     "tags": []
    },
@@ -76,17 +77,18 @@
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as user 'demoA' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_NAME=\"rconway\"\n",
+    "USER_NAME=\"demouser3\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
     "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adaptive-celebration",
+   "id": "raised-ebony",
    "metadata": {},
    "source": [
     "## Data Discovery\n",
+    "**TBD - Needs EOX/EOfarm support to elaborate this**<br>\n",
     "Eric discovers data using platform services (Resource Catalogue / DAS) and QGIS\n",
     "* OpenSearch endpoint\n",
     "* Data visualisation"
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "contrary-recording",
+   "id": "nonprofit-bookmark",
    "metadata": {},
    "source": [
     "### Resource Catalogue - OpenSearch"
@@ -103,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modern-ocean",
+   "id": "nasty-spokesman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "grave-aircraft",
+   "id": "equal-favorite",
    "metadata": {},
    "source": [
     "### Data Access Services - WMS, WCS (TBD)"
@@ -121,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smoking-combination",
+   "id": "precious-public",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "architectural-advocate",
+   "id": "occupational-macro",
    "metadata": {},
    "source": [
     "## Processing - ADES\n",
@@ -141,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "administrative-soccer",
+   "id": "parental-shopping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "empty-nashville",
+   "id": "micro-production",
    "metadata": {},
    "source": [
     "### ADES: List Processes\n",
@@ -168,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "closed-champagne",
+   "id": "middle-sydney",
    "metadata": {
     "tags": []
    },
@@ -177,12 +179,12 @@
     "# API Processes - List Processes\n",
     "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
     "print(\"Processes:\", process_ids)\n",
-    "demo.response_summary(response)"
+    "# demo.response_summary(response)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "civil-graphic",
+   "id": "approximate-template",
    "metadata": {},
    "source": [
     "### ADES: Deploy Application\n",
@@ -195,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "raising-phoenix",
+   "id": "czech-technology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continuing-constitution",
+   "id": "affected-summit",
    "metadata": {},
    "source": [
     "**_Dynamic Resource Protection_**<br>\n",
@@ -216,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "difficult-survey",
+   "id": "fifty-penetration",
    "metadata": {
     "tags": []
    },
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decreased-blowing",
+   "id": "unauthorized-cookie",
    "metadata": {},
    "source": [
     "### ADES: Get Application Details\n",
@@ -241,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "british-inspiration",
+   "id": "copyrighted-trading",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rural-refund",
+   "id": "agricultural-shuttle",
    "metadata": {},
    "source": [
     "### ADES: Execute Application\n",
@@ -265,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "obvious-child",
+   "id": "disturbed-stroke",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rolled-circus",
+   "id": "conceptual-mouth",
    "metadata": {},
    "source": [
     "### ADES: Job Status\n",
@@ -288,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "checked-administration",
+   "id": "saving-attribute",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bacterial-roberts",
+   "id": "stunning-central",
    "metadata": {},
    "source": [
     "**Polling for Job Completion**<br>\n",
@@ -310,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nervous-relay",
+   "id": "hazardous-controversy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "starting-guide",
+   "id": "favorite-briefing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,17 +332,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "frozen-implement",
+   "id": "assured-battery",
    "metadata": {},
    "source": [
     "### ADES Stage-out\n",
     "At the successful completion of processing, the ADES stages out the results to platform storage (under the direction of the user's Workspace component), and registers the data in the User Workspace for access and further exploitation.<br>\n",
-    "![ADES processing results stage-out](https://raw.githubusercontent.com/EOEPCA/eoepca/technotes/technical/workspace/seq-ades-processing-results-stage-out.png)"
+    "![ADES processing results stage-out](https://raw.githubusercontent.com/EOEPCA/eoepca/develop/technical/workspace/seq-ades-processing-results-stage-out.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "pleasant-prediction",
+   "id": "uniform-australia",
    "metadata": {},
    "source": [
     "### ADES: Job Result\n",
@@ -352,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secret-ceremony",
+   "id": "alpha-ebony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "twenty-custom",
+   "id": "homeless-import",
    "metadata": {},
    "source": [
     "### ADES: List Jobs"
@@ -372,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "complex-happiness",
+   "id": "searching-stephen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "traditional-relative",
+   "id": "senior-touch",
    "metadata": {},
    "source": [
     "### ADES: Undeploy Application"
@@ -392,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "binding-execution",
+   "id": "grand-palestine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "functional-object",
+   "id": "reliable-bleeding",
    "metadata": {
     "tags": []
    },
@@ -416,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cloudy-ordinary",
+   "id": "promotional-border",
    "metadata": {},
    "source": [
     "## Workspace"
@@ -425,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "usual-architecture",
+   "id": "ceramic-cooperative",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "allied-baltimore",
+   "id": "finished-tongue",
    "metadata": {},
    "source": [
     "### Workspace: Get Details"
@@ -445,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tough-auditor",
+   "id": "domestic-kansas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,12 +455,12 @@
     "workspace_name = \"rm-user-\" + USER_NAME.lower()\n",
     "response, workspace_access_token = demo.workspace_get_details(workspace_url, workspace_name, id_token=user_id_token, access_token=workspace_access_token)\n",
     "workspace_details = response.json()\n",
-    "print(json.dumps(workspace_details, indent = 2))"
+    "demo.response_summary(response)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adopted-interaction",
+   "id": "headed-calculator",
    "metadata": {},
    "source": [
     "### Inspect S3 Bucket"
@@ -467,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "guilty-morning",
+   "id": "lovely-monitor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "administrative-composition",
+   "id": "smart-wheel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,6 +499,27 @@
     "for obj in bucket.objects.all():\n",
     "    print(' ->', obj)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "governmental-allocation",
+   "metadata": {},
+   "source": [
+    "## Results Consumption\n",
+    "**TBD - Needs EOX/EOfarm support to elaborate this**<br>\n",
+    "* Results discovery - User's resource catalogue (OpenSearch)\n",
+    "* Results visualisation:\n",
+    "  * Data access services\n",
+    "  * QGIS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "colonial-kruger",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
