--- a/demoroot/notebooks/05 Data Access.ipynb
+++ b/demoroot/notebooks/05 Data Access.ipynb
@@ -66,6 +66,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "badb5045-91d1-404d-a28c-8ab331490697",
+   "metadata": {},
+   "source": [
+    "TODO: Fix the WMS endpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51ef01ba-566a-4b76-aa0d-b7d95f644f3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wms_endpoint='https://data-access.185.52.193.87.nip.io/ows?service=WMS&version=1.3.0&request=GetCapabilities'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "21f7e4ca-08b7-4322-b927-16a169a0c9e6",
@@ -86,47 +104,29 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "badb5045-91d1-404d-a28c-8ab331490697",
-   "metadata": {},
-   "source": [
-    "### TODO: Fix the WMS endpoint"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0bb01b3-448c-4a19-97a4-cbbc2911a2b1",
+   "id": "bd3ebb32-91fb-4799-9d34-3988fc86960c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wms = WebMapService('http://apps.ecmwf.int/wms/?token=public', version='1.3.0')"
+    "wms['S2L2A'].title"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c81bd71b-fc1d-41c3-a56f-e1d9016ace16",
+   "id": "56ce9bc3-84d4-4f1c-9b4a-a4469bd92ca4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wms['composition_co2_surface'].title"
+    "wms['S2L2A'].boundingBoxWGS84"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c393f30-488d-474f-92d8-b0bb8907930c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wms['composition_co2_surface'].boundingBoxWGS84"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc307293-cbe0-418b-ab6d-50ad074a67be",
+   "id": "fd2ad968-25d5-46f7-bc13-92a49a3eba55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,17 +136,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81201ee3-d185-44c7-bb5b-2bcf48aa0da3",
+   "id": "f24b8ddd-bfb5-4bc3-814c-eb385e8f8de4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wms['composition_co2_surface'].styles"
+    "wms['S2L2A'].styles"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c44619a8-67b0-41eb-9bb8-8bfcb423c307",
+   "id": "2739a43b-9848-4f63-821a-982aac96871c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +165,7 @@
     "import matplotlib.image as mpimg\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "wms = WebMapService('http://apps.ecmwf.int/wms/?token=public', version='1.3.0')\n",
     "def getMap(layerName,bbox,filename):\n",
     "    wms.getOperationByName('GetMap').formatOptions\n",
     "    img = wms.getmap(layers=[layerName],\n",
