Show record types

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -345,7 +345,7 @@
    "outputs": [],
    "source": [
     "for rec in csw.records:\n",
-    "    print(csw.records[rec].identifier)"
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')"
    ]
   },
   {
