Show record types in catalogue responces

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -120,7 +120,7 @@
    "outputs": [],
    "source": [
     "for rec in csw.records:\n",
-    "    print(csw.records[rec].title)"
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "for rec in csw.records:\n",
-    "    print(csw.records[rec].title)"
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')"
    ]
   },
   {
@@ -243,7 +243,8 @@
     "records = '\\n'.join(csw.records.keys())\n",
     "print('Found {} records.\\n'.format(len(csw.records.keys())))\n",
     "for key, value in list(csw.records.items()):\n",
-    "    print(value.title)"
+    "    print(value.title)\n",
+    "    print(f'identifier: {value.identifier}\\ntype: {value.type}\\ntitle: {value.title}\\n')"
    ]
   },
   {
