Use ISO-19115 for collection records

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.getrecords2(constraints=[bbox_query])\n",
+    "csw.getrecords2(constraints=[bbox_query], outputschema='http://www.isotc211.org/2005/gmd')\n",
     "csw.results"
    ]
   },
@@ -152,7 +152,7 @@
    "outputs": [],
    "source": [
     "for rec in csw.records:\n",
-    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')"
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].identification.identtype}\\ntitle: {csw.records[rec].identification.title}\\n')"
    ]
   },
   {
@@ -174,6 +174,35 @@
    "source": [
     "csw.getrecords2(constraints=[anytext_query])\n",
     "csw.results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0078184-bde5-48b6-a4ab-471a030a19bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw_records = {}\n",
+    "sortby = SortBy([SortProperty('dc:title', 'ASC')])\n",
+    "pagesize=10\n",
+    "maxrecords=1000\n",
+    "startposition = 0\n",
+    "nextrecord = getattr(csw, 'results', 1)\n",
+    "while nextrecord != 0:\n",
+    "    csw.getrecords2(constraints=[anytext_query], startposition=startposition,\n",
+    "                    maxrecords=pagesize, sortby=sortby)\n",
+    "    csw_records.update(csw.records)\n",
+    "    if csw.results['nextrecord'] == 0:\n",
+    "        break\n",
+    "    startposition += pagesize\n",
+    "    if startposition >= maxrecords:\n",
+    "        break\n",
+    "csw.records.update(csw_records)\n",
+    "records = '\\n'.join(csw.records.keys())\n",
+    "print('Found {} records.\\n'.format(len(csw.records.keys())))\n",
+    "for key, value in list(csw.records.items()):\n",
+    "    print(f'identifier: {value.identifier}\\ntype: {value.type}\\ntitle: {value.title}\\n')"
    ]
   },
   {
@@ -214,37 +243,6 @@
    "outputs": [],
    "source": [
     "csw.records['S2B_MSIL2A_20200905T092029_N0214_R093_T34SEJ_20200905T113748.SAFE'].references"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0078184-bde5-48b6-a4ab-471a030a19bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "csw = CatalogueServiceWeb(system_endpoint, timeout=60)\n",
-    "csw_records = {}\n",
-    "sortby = SortBy([SortProperty('dc:title', 'ASC')])\n",
-    "pagesize=10\n",
-    "maxrecords=1000\n",
-    "startposition = 0\n",
-    "nextrecord = getattr(csw, 'results', 1)\n",
-    "while nextrecord != 0:\n",
-    "    csw.getrecords2(constraints=[anytext_query], startposition=startposition,\n",
-    "                    maxrecords=pagesize, sortby=sortby)\n",
-    "    csw_records.update(csw.records)\n",
-    "    if csw.results['nextrecord'] == 0:\n",
-    "        break\n",
-    "    startposition += pagesize\n",
-    "    if startposition >= maxrecords:\n",
-    "        break\n",
-    "csw.records.update(csw_records)\n",
-    "records = '\\n'.join(csw.records.keys())\n",
-    "print('Found {} records.\\n'.format(len(csw.records.keys())))\n",
-    "for key, value in list(csw.records.items()):\n",
-    "    print(value.title)\n",
-    "    print(f'identifier: {value.identifier}\\ntype: {value.type}\\ntitle: {value.title}\\n')"
    ]
   },
   {
